# sniffer

./: .gitignore  README.md  environment-min.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
src/sniffer/: __init__.py  config.py.template  last_date.py  lock.py  package_pool.py  sniff.py
src/sniffer/embargo/: embargo_pool.py
src/sniffer/model/: __init__.py  data_resource_db.py  embargo_db.py  offline_db.py  package_db.py  pasta_data_package_manager_db.py  resource_db.py  sniffer_db.py
src/sniffer/offline/: offline_pool.py
src/sniffer/package/: package_pool.py
tests/: test_embargo_model.py  test_embargo_pool.py  test_model.py  test_offline_model.py  test_offline_pool.py  test_package_model.py  test_package_pool.py
