[project]
authors = [{name = "Mark Servilla", email = "mark.servilla@gmail.com"}]
dependencies = []
name = "sniffer"
requires-python = ">= 3.11"
version = "2026.03.15"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
psycopg2-binary = ">=2.9.10,<3"
psycopg2 = ">=2.9.10,<3"
click = ">=8.3.1,<9"
daiquiri = ">=3.0.0,<4"
lxml = ">=6.0.2,<7"
pendulum = ">=3.2.0,<4"
pytest = ">=9.0.2,<10"
requests = ">=2.32.5,<3"
sqlalchemy = "<2.0"
